# control-agent

./: .gitignore  README.md  dev.py  env.example  env.example.txt  pyproject.toml  sim_dev.py  step_debug.py  test.py  test_agent.py  test_exp_report_eval.py  test_lambda_tuning_evaluator.py  test_sim_fix.py  test_simulation.py  test_tools.py  tools_test.py
data/reports/: list_model_names-1762790593.json
docs/: fopdt_pi_description.md  keywords.md  lam_method.md  seaborg.md  zn_method.md
fmus/simulink/: fopd.slx  fopd.slxc  parameters.m
models/fmus/: PI_FOPDT_2.fmu  PI_FOPDT_3.fmu  fopd.fmu  fopdt_pi.fmu
models/fmus/old/: PI_FOPDT.fmu
scripts/: test.py  test_exp_report_eval.py  test_tools.py
src/agent/: __init__.py  agent.py  api.py  cli.py  core.py  core_agent.py  dashboard.py  run_ag_ui.py  tools_wrapper.py  utils.py
src/agent/evaluation/: __init__.py  evaluator.py  metrics.py
src/agent/prompts/: __init__.py  response_schema.py  sim_prompt.py  sys_prompt.py
src/agent/tool_functions/: information.py  inputs.py
src/agent/tools/: __init__.py  analyze.py  fmi_tools.py  fmu_info.py  identify.py  mcp_fmi.py  parameters.py  signals.py  simulate.py
src/agent/tools/functions/: __init__.py  artifacts.py  information.py  inputs.py  schema.py  simulation.py
src/control_agent/: __init__.py  cli.py  lam.py  zn.py
src/control_agent/agent/: __init__.py  agent.py  common.py  ctx.py  docstrings.py  guardrails.py  make_tool.py  model.py  model_validators.py  stored_model.py  tools.py  tools_ctx.py
src/control_agent/agent/context/: __init__.py  models.py
src/control_agent/agent/core/: __init__.py  agent.py  model.py  types.py
src/control_agent/agent/tools/: __init__.py  base.py  context.py  docstrings.py
src/control_agent/agent/utils/: __init__.py  docstrings.py
src/control_agent/agent/validation/: __init__.py  guardrails.py  validators.py
src/control_agent/cli/: __init__.py  main.py
src/control_agent/domain/: __init__.py  models.py
src/control_agent/evals/: __init__.py  common.py  dataset_types.py  export_results.py  plan_executor.py  planning.py  report.py  response_schema.py  run.py  simple.py  utils.py
src/control_agent/experiment_definitions/: definitions.py  response_schema.py
src/control_agent/prompts/: __init__.py  sys_prompt.py  system.py
src/control_agent/tools/: control_tool.py
src/control_toolbox/: config.py  schema.py
src/control_toolbox/tools/: analysis.py  information.py  simulation.py  timeseries.py  utils.py
src/evals/: dataset_types.py  report.py  run.py
src/evals/datasets/: __init__.py  generate_step_response.py
src/evals/evaluators/: __init__.py  fopdt_evaluator.py  list_models.py  yaysayer.py
src/evals/experiments/: __init__.py  lam.py  list_models.py  sys.py  tool_info.py
src/experiments/: definitions.py  response_schema.py
src/mcp_fmi_ecc26/: cli.py  lam.py  sys.py  zn.py
src/mcp_fmi_ecc26/agent/: __init__.py  agents.py  tools.py
src/mcp_fmi_ecc26/evals/: run.py  simple.py
src/mcp_fmi_ecc26/ui/: main.py
src/mcp_fmi_ecc26/utils/: fmu.py
tests/: test_simulation.py  test_start_mcp.py
tests/custom_evaluators/: test_tool_call_sequence.py
tests/evals/: __init__.py  test_evals.py
tests/integration/: test_ctx_tools.py  test_tool_call_sequence_integration.py
tests/unit/: test_guardrails.py  test_make_tool_resolving.py  test_parse_result.py  test_tool_call_sequence_helper.py
(+68 files in other folders)
