[project]
name = "mcp_fmi_ecc26"
version = "0.1.0"
description = "Experiment method and results for MCP-FMI  ECC26 paper."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash>=3.2.0",
    "fastapi>=0.120.1",
    "fmpy>=0.3.26",
    "logfire>=4.14.2",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "plotly>=6.3.1",
    "pydantic>=2.12.0",
    "pydantic-ai>=1.7.0",
    "pydantic-ai-slim[ag-ui,fastmcp,mcp,openai]>=1.7.0",
    "pytest>=8.4.2",
    "python-fasthtml>=0.12.31",
    "scipy>=1.16.2",
    "typer>=0.12.0",
    "uvicorn>=0.38.0",
]

[project.scripts]
ecc26 = "mcp_fmi_ecc26.cli:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
mcp-fmi = { git = "https://github.com/Novia-RDI-Seafaring/mcp-fmi.git" }
