[project]
name = "control_agent"
version = "0.1.0"
description = "Experiment method and results for ECC26 paper."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agent-control-toolbox>=0.1.0",
    "dash>=3.2.0",
    "fastapi>=0.120.1",
    "fmpy>=0.3.26",
    "logfire>=4.14.2",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "plotly>=6.3.1",
    "pydantic>=2.12.0",
    "pydantic-ai>=1.7.0",
    "pydantic-ai-examples>=1.7.0",
    "pydantic-ai-slim[ag-ui,fastmcp,mcp,openai]>=1.7.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "python-fasthtml>=0.12.31",
    "scipy>=1.16.2",
    "typer>=0.12.0",
    "uvicorn>=0.38.0",
]

[project.scripts]
ecc26 = "control_agent.cli:app"
eval = "control_agent.evals.run:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
agent-control-toolbox = { git = "https://github.com/Novia-RDI-Seafaring/agent-control-toolbox.git" }

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "eval: marks tests as eval tests (deselect with '-m \"not eval\"')",

]
